Implemented basic data types

--- a/desktop/sources/links/main.css
+++ b/desktop/sources/links/main.css
@@ -1,4 +1,4 @@
-body { background:black; color:white; font-family: 'input_mono_regular'; padding:60px; }
+body { background:black; color:white; font-family: 'input_mono_regular'; padding:30px; overflow: hidden; }
 grid { display: block;white-space: pre;font-size: 11px;line-height: 10px;  }
 grid c { background:#fff; color:#000; }
 grid l { background:#f00; color:#fff; }
