Implemented resize on load

--- a/desktop/sources/links/main.css
+++ b/desktop/sources/links/main.css
@@ -1,2 +1,2 @@
 body { font-family: 'input_mono_regular'; padding:30px; overflow: hidden; -webkit-app-region: drag; transition: background-color 500ms; }
-canvas { display: block;white-space: pre;font-size: 11px;line-height: 10px; text-transform: uppercase; width:300px; margin:calc(50vh - (450px/2) - 30px) auto; -webkit-app-region: drag;}
+canvas { display: block;white-space: pre;font-size: 11px;line-height: 10px; text-transform: uppercase; width:300px; margin:0px auto; -webkit-app-region: drag;}
