--- a/desktop/sources/links/main.css
+++ b/desktop/sources/links/main.css
@@ -9,7 +9,7 @@
 /* Main */
 
 body { font-family: 'input_mono_medium'; padding:30px; overflow: hidden; -webkit-app-region: drag; transition: background-color 500ms; background-size: cover; background-position: center center; max-height: calc(100% - 60px); }
-canvas { display: block;white-space: pre;font-size: 11px;line-height: 10px; text-transform: uppercase; width:300px; opacity: 0;-webkit-app-region: no-drag; transition: opacity 1000ms; }
+canvas { display: block;white-space: pre;font-size: 11px;line-height: 10px; text-transform: uppercase; width:300px; opacity: 0;-webkit-app-region: no-drag; transition: opacity 1000ms; image-rendering: pixelated; image-rendering: optimizeSpeed; }
 canvas.ready { opacity: 1; }
 
 /* Theme */
